--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
+    "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "reset-css": "^5.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
